Canvas resizes correctly on mobile screens

--- a/wave-interference/src/less/main.less
+++ b/wave-interference/src/less/main.less
@@ -27,9 +27,9 @@ body {
 .sim-canvas {
 	width: 100%;
 	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
+	// position: absolute;
+	// top: 0;
+	// left: 0;
 	background-color: #fff;
 	z-index: @canvas-z-index;
 }
