--- a/wave-interference/src/less/tabs.less
+++ b/wave-interference/src/less/tabs.less
@@ -51,7 +51,8 @@
 
 .sim-content {
 	display: none;
-	min-height: 600px;
+	height: 100%;
+	max-height: 600px;
 	position: relative;
 
 	&.active {
